; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/tdilib/extr_enum.c_tdiGetEntityIDSet.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/tdilib/extr_enum.c_tdiGetEntityIDSet.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@INFO_CLASS_GENERIC = common dso_local global i32 0, align 4
@INFO_TYPE_PROVIDER = common dso_local global i32 0, align 4
@ENTITY_LIST_ID = common dso_local global i32 0, align 4
@GENERIC_ENTITY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @tdiGetEntityIDSet(i32 %0, i32** %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32**, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32** %1, i32*** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load i32, i32* %4, align 4
  %9 = load i32, i32* @INFO_CLASS_GENERIC, align 4
  %10 = load i32, i32* @INFO_TYPE_PROVIDER, align 4
  %11 = load i32, i32* @ENTITY_LIST_ID, align 4
  %12 = load i32, i32* @GENERIC_ENTITY, align 4
  %13 = load i32**, i32*** %5, align 8
  %14 = bitcast i32** %13 to i32*
  %15 = load i32, i32* %6, align 4
  %16 = call i32 @tdiGetSetOfThings(i32 %8, i32 %9, i32 %10, i32 %11, i32 %12, i32 0, i32 0, i32 4, i32* %14, i32 %15)
  store i32 %16, i32* %7, align 4
  %17 = load i32, i32* %7, align 4
  ret i32 %17
}

declare dso_local i32 @tdiGetSetOfThings(i32, i32, i32, i32, i32, i32, i32, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
